Possible to add folder and have applications listed

--- a/TaskbarShortcuts/TaskbarShortcuts.csproj
+++ b/TaskbarShortcuts/TaskbarShortcuts.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="icon.ico" />
+    <Content Include="Resources\icon.ico" />
   </ItemGroup>
 
   <ItemGroup>
