--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build with MSBuild
-      run: msbuild YourProject.sln /p:Configuration=Release
+      run: msbuild SystrayShortcuts.sln /p:Configuration=Release
 
     - name: Upload EXE to GitHub Release
       uses: softprops/action-gh-release@v1
